--- a/css/application.css
+++ b/css/application.css
@@ -1,5 +1,8 @@
 @import "bootstrap.min.css";
 @import "theme-default.css";
+
+@import "owl.carousel.css";
+
 @import "mainpage.css";
 @import "header.css";
 @import "navigation.css";
