--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,19 @@
 	-webkit-background-size: cover;
 	background-size: cover;
 }
+
+@media (max-width:768px){
+	#header{
+		background: #033981;
+		height: auto;
+		position: relative;
+		z-index: 9999;
+	}
+	#header .logo{
+		margin: 10px 0 !important;
+	}
+}
+
 #header .logo{
 	margin-top: 15px;
 	display: block;
@@ -23,7 +36,3 @@
 		margin: 0 0 25px;
 		text-shadow: 3px 3px 6px rgba(0,0,0, .35);
 	}
-
-@media screen {
-	
-}
