--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,5 +1,67 @@
 #nav_desktop{ margin-top: 45px; }
+#nav_mobile{
+	display: none;
+	background-color: #022f6a;
+	text-align: center;
+}
+#nav_desktop a, 
+#nav_mobile a{
+	display: block;
+	padding: 15px 12px;
+	text-transform: uppercase;
+	font-size: 18px;
+	text-shadow: 3px 3px 6px rgba(0,0,0, .35);
+	font-family: helvetica, sans-serif;
+}
+#nav_mobile.open{
+	display: block;
+}
+#nav_mobile a{
+	color: #fff;
+}
+	#nav_mobile a:hover{
+		text-decoration: none;
+	}
 
+/* switch button */
+.menu_switch{
+	position: relative;
+	padding: 10px 35px 16px 0px;
+	margin-top: 55px;
+	cursor: pointer;
+}
+.menu_switch span, .menu_switch span:before, .menu_switch span:after {
+  cursor: pointer;
+  border-radius: 1px;
+  height: 5px;
+  width: 35px;
+  background: white;
+  position: absolute;
+  display: block;
+  content: '';
+}
+.menu_switch span:before {
+  top: -10px; 
+}
+.menu_switch span:after {
+  bottom: -10px;
+}
+
+.menu_switch span, .menu_switch span:before, .menu_switch span:after {
+  transition: all 300ms ease-in-out;
+}
+.menu_switch.active span {
+  background-color: transparent;
+}
+.menu_switch.active span:before, .menu_switch.active span:after {
+  top: 0;
+}
+.menu_switch.active span:before {
+  transform: rotate(45deg);
+}
+.menu_switch.active span:after {
+  transform: rotate(-45deg);
+}
 /* not my styles */
 .menu {
 	line-height: 1;
@@ -18,8 +80,6 @@
 .menu__item { display: block; }
 
 .menu__link {
-	text-transform: uppercase;
-	font-size: 18px;
 	display: block;
 	padding: 15px 12px;
 	cursor: pointer;
@@ -46,8 +106,7 @@
 	-webkit-transition: color 0.4s;
 	transition: color 0.4s;
 
-	text-shadow: 3px 3px 6px rgba(0,0,0, .35);
-	font-family: helvetica, sans-serif;
+	
 }
 .menu--viola .menu__link:hover,
 .menu--viola .menu__link:focus {
