--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -16,7 +16,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
+	/*font: inherit;*/
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -24,15 +24,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
+body { line-height: 1; }
+ol, ul { list-style: none; }
+blockquote, q { quotes: none; }
 blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
@@ -42,6 +36,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+p{ margin: 0; }
 
 /* clearfix */
 .clearfix:after {
@@ -65,6 +60,10 @@ body{
 
 	font-size: 14px;
 	font-family: 'Open Sans', helvetica, arial, sans-serif;
+}
+.inner_container{
+  padding-top: 60px;
+  padding-bottom: 95px;
 }
 
 #header{ flex: 0 0 auto; }
@@ -99,7 +98,57 @@ body{
 	line-height: 23px;
 	color: #303030;
 }
-p{ margin: 0; }
+.title_small{
+  margin-bottom: 15px;
+  
+  font-size: 14px;
+  line-height: 14px !important;
+  color: #303030;
+  font-weight: 600;
+}
+
+
+/* breadcrumbs */
+/* rewrite&add bootstrap*/
+.breadcrumb_wrapper{
+  background-color: #f7f7f7;
+}
+.breadcrumb{
+  padding: 13px 15px;
+  border-radius: 0;
+}
+  .breadcrumb a{
+    font-size: 16px;
+    color: #fa7600;
+  }
+  .breadcrumb .active,
+  .breadcrumb .active:before{
+    color: #303030;
+    font-size: 14px;
+  }
+
+/* ck_editor */
+.ck_editor{}
+.ck_editor,
+.ck_editor * {
+  font-size: 14px;
+  line-height: 23px;
+  color: #303030;
+}
+.ck_editor img{
+  /* add img-responsive for all ck_editor images */
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+}
+.ck_editor img.left{
+  float: left;
+  display: inline-block;
+  margin: 0 25px 25px 0;
+}
+.ck_editor a{
+  color: #fa7600;
+}
 
 /* animation */
 .animated {
