--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -150,6 +150,42 @@ body{
   color: #fa7600;
 }
 
+/* form style */
+.form_style{}
+.form_style input,
+.form_style textarea{
+  width: 100%;
+  padding: 10px 19px;
+  margin-bottom: 15px;
+  
+  border: 0;
+  outline: none;
+  border-left: 3px solid #4183d7;
+  border-bottom: 3px solid #4183d7;
+
+  font-size: 16px;
+  line-height: 16px;
+}
+.form_style textarea{ resize: none; }
+
+.form_style .send_btn{
+  padding: 15px 19px;
+  border: 3px solid #fa7600;
+
+  background-color: #fff;
+  font-size: 21px;
+  color: #fa7600;
+  font-weight: 600;
+
+  -webkit-transition: all .15s ease;
+  -o-transition: all .15s ease;
+  transition: all .15s ease;
+}
+  .form_style .send_btn:hover{
+    color: #fff;
+    background-color: #fa7600;
+  }
+
 /* animation */
 .animated {
   -webkit-animation-duration: 1s;
