--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,11 @@
 #header{
-	height: 580px;
-	
 	background: url('images/header_bg.jpg') no-repeat 50% 0;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
+	#header.header_mainpage{
+		height: 580px;	
+	}
 
 @media (max-width:768px){
 	#header{
@@ -20,6 +21,7 @@
 
 #header .logo{
 	margin-top: 15px;
+	margin-bottom: 25px;
 	display: block;
 }
 
