news template, footer socials

--- a/css/footer.css
+++ b/css/footer.css
@@ -53,3 +53,21 @@
 		float: right;
 		height: 35px;
 	}
+
+#footer .f_socials a{
+	display: inline-block;
+	width: 31px;
+	height: 31px;
+	margin-right: 12px;
+	
+	border: 1px solid #fff;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	
+	text-align: center;
+	line-height: 31px;
+	color: #fff;
+}
+	#footer .f_socials a:hover{
+		text-decoration: none;
+	}
