--- a/css/news.css
+++ b/css/news.css
@@ -23,3 +23,21 @@
 		margin-top: 25px;
 		margin-right: 20px;
 	}
+
+/* make right side 100% height of parent */
+.news_items_wrapper .item .row{
+	position: relative;
+	height: auto;
+}
+.news_items_wrapper .col-sm-8{
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	padding-bottom: 35px;
+}
+@media(max-width: 768px){
+	.news_items_wrapper .col-sm-8{
+		position: relative;
+	}
+}
