--- a/css/header.css
+++ b/css/header.css
@@ -1,16 +1,17 @@
 #header{
-	background: url('images/header_bg.jpg') no-repeat 50% 0;
+	background: url('images/header_bg.jpg') no-repeat 50% -80px;
 	-webkit-background-size: cover;
 	background-size: cover;
 }
 	#header.header_mainpage{
 		height: 580px;	
+		background-position: 50% 0;
 	}
 
 @media (max-width:768px){
 	#header{
 		background: #033981;
-		height: auto;
+		height: auto !important;
 		position: relative;
 		z-index: 9999;
 	}
@@ -31,7 +32,8 @@
 
 
 #header .h1_style,
-#header .text_style{
+#header .text_style,
+#header .text_style *{
 	color: #fff;
 }
 	#header .h1_style{
