--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -88,6 +88,11 @@ body{
 }
 .h1_style, 
 .h2_style{ font-size: 35px; }
+@media(max-width: 768px){
+  .h1_style, 
+  .h2_style{ font-size: 24px !important; }
+  .h3_style{ font-size: 20px !important; }
+}
 .h2_style{ 
 	margin-bottom: 20px;
 	color: #4183d7;
