--- a/css/contacts.css
+++ b/css/contacts.css
@@ -15,3 +15,27 @@
     margin-bottom: 25px;
   }
 }
+
+.message_confirm{
+  padding: 30px;
+
+  background-color: #4183d7;
+  color: #fff;
+  font-size: 14px;
+  text-align: center;
+  margin-bottom: 15px;
+
+  position: relative;
+}
+  .message_confirm .close_confirm{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    cursor: pointer;
+    color: #fff;
+    font-size: 30px;
+
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
