--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -5,6 +5,14 @@
   /* + footer in footer.css*/
   padding-top: 95px;
 } 
+@media(max-width: 768px){
+  .services,
+  .advantages,
+  .news,
+  .seo{
+    padding-top: 40px !important;
+  }
+}
 
 /* services section */
 .services_slider{
@@ -67,9 +75,12 @@
 @media (max-width: 768px){
 	.advantages{
 		height: auto;
-		padding-bottom: 95px;
+		padding-bottom: 20px;
 		background: #4183d7;
 	}
+  .advantages .h2_style{
+    margin-bottom: 40px !important;
+  }
 	.advantages .item{
 		margin-bottom: 50px;
 	}
@@ -102,6 +113,11 @@
 .news .items_wrapper{
   margin-top: 90px;
 }
+  @media (max-width: 768px){
+    .news .items_wrapper{
+      margin-top: 20px !important;
+    }
+  }
 .news .item{
   position: relative;
   border-left: 4px solid #4183d7;
@@ -179,5 +195,9 @@
 /* seo section */
 .seo{
   padding-bottom: 95px;
-  padding-top: 80px;
 }
+  @media(max-width: 768px){
+    .seo{
+      padding-bottom: 40px !important;
+    }
+  }
