ck_editor li list-style

--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -190,6 +190,7 @@ body{
   font-size: 14px;
   line-height: 23px;
   color: #303030;
+  list-style: inherit !important;
 }
 .ck_editor img{
   /* add img-responsive for all ck_editor images */
